# DecentraliNK

./: 99-local.rules  CHANGELOG.md  LICENSE  NK.cabal  README  mount-device.sh  nkcert  nkcert.pub
src/: Client.hs  Main.hs  Server.hs
