cabal-version:       >=1.10

name:                NK
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Mark Santolucito
maintainer:          mark.santolucito@yale.edu
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable NKClient
  main-is:             Client.hs
  ghc-options: -Wall -O2 -static -threaded
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9.0.0
                     , network
                     , network-simple
                     , bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

executable NKServer
  main-is:             Server.hs
  ghc-options: -Wall -O2 -static -threaded
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9.0.0
                     , network
                     , network-simple
                     , process
  hs-source-dirs:      src
  default-language:    Haskell2010
